; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/x86/kernel/extr_amd_iommu.c_iommu_flush_pages.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/x86/kernel/extr_amd_iommu.c_iommu_flush_pages.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.amd_iommu = type { i32 }

@PAGE_SIZE = common dso_local global i32 0, align 4
@PAGE_MASK = common dso_local global i32 0, align 4
@CMD_INV_IOMMU_ALL_PAGES_ADDRESS = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.amd_iommu*, i32, i32, i64)* @iommu_flush_pages to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @iommu_flush_pages(%struct.amd_iommu* %0, i32 %1, i32 %2, i64 %3) #0 {
  %5 = alloca %struct.amd_iommu*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i64, align 8
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  store %struct.amd_iommu* %0, %struct.amd_iommu** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  store i64 %3, i64* %8, align 8
  store i32 0, i32* %9, align 4
  %11 = load i32, i32* %7, align 4
  %12 = load i64, i64* %8, align 8
  %13 = load i32, i32* @PAGE_SIZE, align 4
  %14 = call i32 @iommu_num_pages(i32 %11, i64 %12, i32 %13)
  store i32 %14, i32* %10, align 4
  %15 = load i32, i32* @PAGE_MASK, align 4
  %16 = load i32, i32* %7, align 4
  %17 = and i32 %16, %15
  store i32 %17, i32* %7, align 4
  %18 = load i32, i32* %10, align 4
  %19 = icmp ugt i32 %18, 1
  br i1 %19, label %20, label %22

20:                                               ; preds = %4
  %21 = load i32, i32* @CMD_INV_IOMMU_ALL_PAGES_ADDRESS, align 4
  store i32 %21, i32* %7, align 4
  store i32 1, i32* %9, align 4
  br label %22

22:                                               ; preds = %20, %4
  %23 = load %struct.amd_iommu*, %struct.amd_iommu** %5, align 8
  %24 = load i32, i32* %7, align 4
  %25 = load i32, i32* %6, align 4
  %26 = load i32, i32* %9, align 4
  %27 = call i32 @iommu_queue_inv_iommu_pages(%struct.amd_iommu* %23, i32 %24, i32 %25, i32 0, i32 %26)
  ret i32 0
}

declare dso_local i32 @iommu_num_pages(i32, i64, i32) #1

declare dso_local i32 @iommu_queue_inv_iommu_pages(%struct.amd_iommu*, i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
